finish with ressource

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,7 +25,7 @@
 /* Couleurs principales sombre */
 --dark-background: #1E1E1E;    /* Fond général sombre */
 --dark-blue: #003366;           /* Bleu foncé pour header ou boutons */
---dark-gold: #E6C200;           /* Or doux, pour accents sur sombre */
+--dark-gold: #FFE600;           /* Or doux, pour accents sur sombre */
 --dark-white: #FFFFFF;           /* Texte blanc sur sombre */
 --dark-grey: #CCCCCC;            /* Texte secondaire clair */
 --dark-black: #000000;           /* Noir pur */
