--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,9 +8,13 @@
 ===================== */
 
 /* Couleurs principales */
---primary-blue: #173366;       /* Bleu profond, pour header, textes importants */
+/* --primary-blue: #173366;      */
+  /* Bleu profond, pour header, textes importants */
+--primary-blue: #6997ee;       /* Bleu profond, pour header, textes importants */
 --secondary-white: #FFFFFF;    /* Blanc pur, pour fonds et textes sur foncé */
---highlight-gold: #E6C200;    /* Or doux, pour boutons, accents, call-to-action */
+/* --highlight-gold: #E6C200;    */
+--highlight-gold: #090909;   
+ /* Or doux, pour boutons, accents, call-to-action */
 --background-light: #F5F5F5;  /* Fond clair secondaire */
 --text-secondary: #4D4D4D;    /* Texte secondaire / icônes */
 --text-dark: #000000;          /* Texte noir principal */
@@ -29,7 +33,9 @@
 --dark-white: #FFFFFF;           /* Texte blanc sur sombre */
 --dark-grey: #CCCCCC;            /* Texte secondaire clair */
 --dark-black: #000000;           /* Noir pur */
---dark-accent: #00BFFF;          /* Accent cyan sur sombre */
+/* --dark-accent: #00BFFF;       */
+    /* Accent cyan sur sombre */
+--dark-accent: #c0dce65e;          /* Accent cyan sur sombre */
 
 
 }
