add flash and add category

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,6 +37,9 @@
     /* Accent cyan sur sombre */
 --dark-accent: #c0dce65e;          /* Accent cyan sur sombre */
 
+--success-green:#22c55e;
+--error-red:#ef4444;
+
 
 }
 
