add link in dashboard

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@
 /* --primary-blue: #173366;      */
   /* Bleu profond, pour header, textes importants */
 --primary-blue: #6997ee;       /* Bleu profond, pour header, textes importants */
+--primary-blue2: #9bb4e1;       /* Bleu profond, pour header, textes importants */
 --secondary-white: #FFFFFF;    /* Blanc pur, pour fonds et textes sur foncé */
 /* --highlight-gold: #E6C200;    */
 --highlight-gold: #090909;   
