--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,7 +44,7 @@
     --flash: #4fa740;
     /* --white-color:#ffffff; */
     --dark-map2: #1e1e1e;
-    --card-dark:#0A0A0A;
+    --card-dark: #0a0a0a;
 }
 
 .banner {
