--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -189,3 +189,7 @@
         @apply bg-background text-foreground;
     }
 }
+
+*, ::after, ::before, body {
+    font-family: NeueHaasGrotesk, Helvetica, Arial, sans-serif;
+}
